--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
+    "clsx": "^2.1.1",
     "next": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0"
