--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,7 @@ DB_SSLMODE=disable
 # JWT Authentication
 # ------------------------------------------
 JWT_SECRET=your-secret-key-minimum-32-characters-long
+ADMIN_JWT_SECRET=your-admin-secret-key-minimum-32-chars
 
 # ------------------------------------------
 # Server Configuration
