--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "clsx": "^2.1.1",
     "next": "latest",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
