--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # ===========================================
-# AlephDraad Backend Environment Variables
+# Alephdraad Backend Environment Variables
 # ===========================================
 # Copy this file to .env and fill in the values
 
