Remove avatar files, use Supabase storage only

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,8 @@ coverage/
 *.exe
 *.dll
 *.so
-*.dylib 
+*.dylib
+
+# User uploaded files (stored in Supabase)
+backend/public/avatars/*
+!backend/public/avatars/.gitkeep
