chore: cleanup repo - update gitignore and remove unnecessary files
Gitignore updates:
- Comprehensive reorganization with clear sections
- Add Go binary patterns (app, server, backend, main)
- Add deployment platforms (.vercel, .netlify)
- Add security-sensitive patterns (*.pem, *.key, *.crt)
- Add IDE patterns (sublime, code-workspace)
- Add debug file patterns

Removed files:
- backend/*.exe, backend/server - compiled binaries (127MB saved)
- PASSKEY_FIX.md, PASSKEY_SETUP.md - outdated debug docs
- debug-passkey.sh - debug script no longer needed
- frontend/public/*.svg - unused Next.js template assets
  (vercel.svg, next.svg, globe.svg, file.svg, window.svg)

Security:
- Ensure .env files are properly ignored
- Binary executables will no longer be tracked

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,12 +1,50 @@
-.env
+# ===================================
+# Backend .gitignore
+# ===================================
 
-# Build outputs
+# Environment files (SENSITIVE!)
+.env
+.env.*
+!.env.example
+
+# Go build outputs / binaries
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+app
+server
 backend
 backend-gin
-app
+main
 
+# Go workspace
+go.work
+go.work.sum
+
+# Vendor directory (if using vendoring)
+vendor/
+
+# Test cache and coverage
+*.test
+*.out
+coverage.txt
+coverage.html
+
+# IDE
+.idea/
+.vscode/
+
+# Debug files
+*.pprof
+debug-*.sh
+
+# Uploaded files (if stored locally)
+uploads/
+public/avatars/*
+!public/avatars/.gitkeep
+
+# Logs
+*.log
+logs/
