--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,91 @@
+# ===================================
+# AlephDraad Project .gitignore
+# ===================================
+
+# ----- Dependencies -----
 **/node_modules/
+**/.pnp
+**/.pnp.*
+**/.yarn/*
+!**/.yarn/patches
+!**/.yarn/plugins
+!**/.yarn/releases
+!**/.yarn/versions
+
+# ----- Build outputs -----
 **/.next/
+**/out/
 **/dist/
 **/build/
+**/*.exe
+**/*.exe~
+**/*.dll
+**/*.so
+**/*.dylib
+
+# Go binaries (backend)
+backend/app
+backend/server
+backend/backend
+backend/backend-gin
+backend/main
+
+# ----- Environment files -----
 .env
 .env.*
 !.env.example
+**/.env
+**/.env.*
+!**/.env.example
 
-# IDE
+# ----- IDE & Editors -----
 .idea/
 .vscode/
 *.swp
 *.swo
+*.sublime-*
+*.code-workspace
 
-# OS
+# ----- OS generated -----
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+desktop.ini
 
-# Logs
+# ----- Logs -----
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+logs/
 
-# Coverage
+# ----- Testing -----
 coverage/
+.nyc_output/
+**/*.test.cache
 
-# Build outputs
-*.exe
-*.dll
-*.so
-*.dylib
+# ----- Deployment -----
+.vercel
+.netlify
 
+# ----- TypeScript -----
+*.tsbuildinfo
+next-env.d.ts
+
+# ----- Misc -----
+*.pem
+*.key
+*.crt
+*.p12
+.cache/
+tmp/
+temp/
+
+# ----- Debug files -----
+debug-*.sh
+*.debug
