--- a/feature-service/.env.example
+++ b/feature-service/.env.example
@@ -1,12 +1,31 @@
-# Example environment variables for feature service
-JWT_SECRET=your-jwt-secret-here-must-match-gin-backend
-JWT_ISSUER=api.alephdraad.fun
-JWT_AUDIENCE=alephdraad-clients
+# ========================================
+# Feature Service Environment Variables
+# ========================================
+# Copy this file to .env and fill in your values
 
+# JWT Configuration (MUST match Go backend)
+JWT__SECRET=your-jwt-secret-here-must-match-gin-backend
+JWT__ISSUER=api.alephdraad.fun
+JWT__AUDIENCE=alephdraad-clients
+
+# MongoDB
 MONGODB__CONNECTIONSTRING=mongodb://127.0.0.1:27017
 MONGODB__DATABASENAME=feature_service_db
 
+# CORS - Frontend URLs
 CORS__ALLOWEDORIGINS__0=https://alephdraad.fun
 
+# ASP.NET Core
 ASPNETCORE_URLS=http://127.0.0.1:5000
 ASPNETCORE_ENVIRONMENT=Production
+
+# HuggingFace API (for AI chat)
+HUGGINGFACE__APIKEY=hf_your_api_key_here
+HUGGINGFACE__MODEL=meta-llama/Llama-3.3-70B-Instruct
+
+# External LLM via n8n (optional)
+EXTERNALLLM__WEBHOOKURL=https://your-n8n-instance/webhook/ai-chat
+
+# Go Backend Integration (for admin actions)
+GOBACKEND__BASEURL=http://localhost:8080
+GOBACKEND__INTERNALAPIKEY=your-internal-api-key
