--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "engines": {
-    "node": "20.x"
+    "node": "25.2.1"
   },
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
