security: remove sensitive credentials from temp_appsettings.json
- Replace MongoDB password with placeholder
- Replace JWT secrets with placeholders
- Add temp_appsettings.json to .gitignore
- Remove file from git tracking

IMPORTANT: Credentials were exposed in commit history.
Consider rotating these secrets on the server.

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,12 @@ next-env.d.ts
 tmp/
 temp/
 
+# ----- Sensitive config files -----
+temp_appsettings.json
+**/appsettings.*.json
+!**/appsettings.Development.json.example
+!**/appsettings.Production.json.example
+
 # ----- Debug files -----
 debug-*.sh
 *.debug
