--- a/feature-service/src/FeatureService.Api/appsettings.json
+++ b/feature-service/src/FeatureService.Api/appsettings.json
@@ -20,5 +20,19 @@
       "https://alephdraad.fun",
       "http://localhost:3000"
     ]
+  },
+  "Redis": {
+    "SentinelEndpoints": ["127.0.0.1:26379"],
+    "ServiceName": "mymaster",
+    "Password": "",
+    "DefaultDatabase": 0,
+    "ConnectTimeout": 5000,
+    "SyncTimeout": 3000,
+    "AbortOnConnectFail": false
+  },
+  "Security": {
+    "MasterEncryptionKey": "",
+    "IdempotencyLockDurationSeconds": 300,
+    "IdempotencyResultTtlHours": 24
   }
 }
