--- a/feature-service/src/FeatureService.Api/FeatureService.Api.csproj
+++ b/feature-service/src/FeatureService.Api/FeatureService.Api.csproj
@@ -19,6 +19,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Ulid" Version="1.3.3" />
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="8.0.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.6.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
