fix: Redis direct connection support for single-node production

--- a/feature-service/src/FeatureService.Api/appsettings.json
+++ b/feature-service/src/FeatureService.Api/appsettings.json
@@ -22,8 +22,9 @@
     ]
   },
   "Redis": {
-    "SentinelEndpoints": ["127.0.0.1:26379"],
-    "ServiceName": "mymaster",
+    "DirectEndpoint": "127.0.0.1:6379",
+    "SentinelEndpoints": [],
+    "ServiceName": "",
     "Password": "",
     "DefaultDatabase": 0,
     "ConnectTimeout": 5000,
