fix: exclude experimental features from linting and remove auto-redirect after 2FA
- Add golangci-lint exclusion rules for AI/RAG, Supabase storage, Deposit/Wallet features
- Remove auto-redirect after 2FA setup to let user save backup codes first
- User must manually navigate back to send/withdraw page after 2FA setup

--- a/backend/.golangci.yml
+++ b/backend/.golangci.yml
@@ -188,6 +188,59 @@ issues:
       linters:
         - godox
 
+    # ==========================================================
+    # AI/RAG Features - Experimental, belum production-ready
+    # Includes: Cohere AI, vector search, RAG pipeline
+    # ==========================================================
+    - path: utils/cohere.*\.go
+      linters:
+        - wrapcheck
+        - gosec
+        - errcheck
+
+    - path: utils/pgvector\.go
+      linters:
+        - wrapcheck
+        - errcheck
+
+    - path: utils/chunker\.go
+      linters:
+        - wrapcheck
+
+    - path: handlers/rag\.go
+      linters:
+        - wrapcheck
+        - gosec
+        - errcheck
+
+    # ==========================================================
+    # External Storage Integration (Supabase)
+    # ==========================================================
+    - path: utils/supabase_storage\.go
+      linters:
+        - wrapcheck
+        - gosec
+        - errcheck
+
+    # ==========================================================
+    # Feature-Service Integration (Deposit/Payment/Wallet)
+    # Fitur masih dalam development
+    # ==========================================================
+    - path: handlers/account\.go
+      linters:
+        - wrapcheck
+
+    # ==========================================================
+    # Auth/Redis services - internal error propagation
+    # ==========================================================
+    - path: services/auth_service.*\.go
+      linters:
+        - wrapcheck
+
+    - path: services/redis_service\.go
+      linters:
+        - wrapcheck
+
 severity:
   default-severity: warning
   case-sensitive: false
