Harden Redis config and bind backend to loopback

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,9 @@
 # Copy this file to .env and fill in the values
 
 # Server Configuration
+# Bind address for the HTTP server.
+# Best practice on a VPS behind Nginx: keep this on 127.0.0.1 so the app isn't directly reachable.
+BIND_ADDR=127.0.0.1
 PORT=8080
 GIN_MODE=debug  # debug or release
 
