--- a/feature-service/.env.example
+++ b/feature-service/.env.example
@@ -12,6 +12,15 @@ JWT__AUDIENCE=alephdraad-clients
 MONGODB__CONNECTIONSTRING=mongodb://127.0.0.1:27017
 MONGODB__DATABASENAME=feature_service_db
 
+# Redis (Idempotency / caching)
+# Best practice for managed Redis: use TLS (rediss://) and strong auth.
+REDIS__CONNECTIONSTRING=rediss://default:your-redis-password@your-redis-host:6379/0
+REDIS__REQUIRETLS=true
+# Optional (only needed if not included in the URL)
+# REDIS__USER=default
+# Optional SNI host override (rare)
+# REDIS__SSLHOST=your-redis-host
+
 # CORS - Frontend URLs
 CORS__ALLOWEDORIGINS__0=https://alephdraad.fun
 
