--- a/feature-service/src/FeatureService.Api/appsettings.json
+++ b/feature-service/src/FeatureService.Api/appsettings.json
@@ -23,10 +23,14 @@
     ]
   },
   "Redis": {
+    "ConnectionString": "",
     "DirectEndpoint": "127.0.0.1:6379",
     "SentinelEndpoints": [],
     "ServiceName": "",
+    "User": "",
     "Password": "",
+    "RequireTls": true,
+    "SslHost": "",
     "DefaultDatabase": 0,
     "ConnectTimeout": 5000,
     "SyncTimeout": 3000,
