security: harden JWT validation and proxy handling

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,14 +9,18 @@
 BIND_ADDR=127.0.0.1
 PORT=8080
 GIN_MODE=debug  # debug or release
+# Trusted proxies for real client IP extraction (Gin default trusts ALL proxies - unsafe).
+# Default recommended for VPS behind local Nginx: "127.0.0.1,::1"
+# Set to "none" to disable forwarded IP handling (ClientIP will be the remote address).
+TRUSTED_PROXIES=127.0.0.1,::1
 
 # Database (PostgreSQL)
 DATABASE_URL=postgresql://user:password@localhost:5432/alephdraad?sslmode=disable
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-key-at-least-32-characters
-JWT_ISSUER=alephdraad
-JWT_AUDIENCE=alephdraad-users
+JWT_ISSUER=api.alephdraad.fun
+JWT_AUDIENCE=alephdraad-clients
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=168h
 
