chore: migrate backend domains to aivalid.id

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,7 +19,7 @@ DATABASE_URL=postgresql://user:password@localhost:5432/alephdraad?sslmode=disabl
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-key-at-least-32-characters
-JWT_ISSUER=api.alephdraad.fun
+JWT_ISSUER=api.aivalid.id
 JWT_AUDIENCE=alephdraad-clients
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=168h
