--- a/feature-service/src/FeatureService.Api/appsettings.json
+++ b/feature-service/src/FeatureService.Api/appsettings.json
@@ -12,13 +12,13 @@
   },
   "Jwt": {
     "Secret": "",
-    "Issuer": "api.alephdraad.fun",
+    "Issuer": "api.aivalid.id",
     "Audience": "alephdraad-clients"
   },
   "Cors": {
     "AllowedOrigins": [
-      "https://alephdraad.fun",
-      "https://www.alephdraad.fun",
+      "https://aivalid.id",
+      "https://www.aivalid.id",
       "http://localhost:3000"
     ]
   },
