chore(frontend): simplify logo SVGs with dark variant

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -13,6 +13,12 @@
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/logo/logo-icon-only-dark.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ],
   "categories": ["finance", "social"],
