fix: stabilize admin wallet and moderation flows across backend/frontend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,19 @@ GIN_MODE=debug  # debug or release
 # Set to "none" to disable forwarded IP handling (ClientIP will be the remote address).
 TRUSTED_PROXIES=127.0.0.1,::1
 
+# Enhanced Rate Limiting
+# Empty value = use secure defaults from code.
+RATE_LIMIT_REQUESTS_PER_MINUTE=
+RATE_LIMIT_REQUESTS_PER_HOUR=
+RATE_LIMIT_AUTH_REQUESTS_PER_MINUTE=
+RATE_LIMIT_AUTH_REQUESTS_PER_HOUR=
+RATE_LIMIT_SEARCH_REQUESTS_PER_MINUTE=
+RATE_LIMIT_ENABLE_IP_LIMIT=true
+RATE_LIMIT_ENABLE_USER_LIMIT=true
+# Comma-separated IP or CIDR lists (e.g. 10.0.0.5,10.0.0.0/24,2001:db8::/32)
+RATE_LIMIT_WHITELIST_IPS=
+RATE_LIMIT_BLACKLIST_IPS=
+
 # Database (PostgreSQL)
 DATABASE_URL=postgresql://user:password@localhost:5432/alephdraad?sslmode=disable
 
