--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,8 @@
 # - Multi-service coordination
 #
 # VPS Configuration:
-# - Feature Service VPS: 194.238.57.132
+# - VPS 1 (Go Backend): 72.62.124.23
+# - VPS 2 (Feature Service): 203.175.11.84
 # =============================================================================
 
 name: Deploy to Production
@@ -217,8 +218,8 @@ jobs:
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: 194.238.57.132
-          username: alep
+          host: ${{ secrets.VPS_FEATURE_HOST }}
+          username: ${{ secrets.VPS_FEATURE_USER }}
           key: ${{ secrets.VPS_FEATURE_SSH_KEY }}
           script: |
             set -e
@@ -228,40 +229,39 @@ jobs:
             echo "=========================================="
 
             # Create backup
-            BACKUP_DIR="/home/alep/backups/$(date +%Y%m%d_%H%M%S)"
+            BACKUP_DIR="/home/asp/backups/$(date +%Y%m%d_%H%M%S)"
             mkdir -p $BACKUP_DIR
-            if [ -f /opt/alephdraad/feature-service/FeatureService.Api.dll ]; then
-              cp -a /opt/alephdraad/feature-service/FeatureService.Api.dll $BACKUP_DIR/FeatureService.Api.dll.bak
+            if [ -d /home/asp/monorepo-root/feature-service/publish ]; then
+              cp -r /home/asp/monorepo-root/feature-service/publish $BACKUP_DIR/
               echo "✅ Backup created: $BACKUP_DIR"
             fi
 
             # Pull latest code
-            cd /home/alep/monorepo-root
+            cd /home/asp/monorepo-root
             git fetch origin main
             git reset --hard origin/main
 
             # Build
             cd feature-service/src/FeatureService.Api
-            dotnet publish -c Release -o /opt/alephdraad/feature-service --self-contained false
+            dotnet publish -c Release -o /home/asp/monorepo-root/feature-service/publish --self-contained false
 
             # Graceful restart
             echo "🔄 Restarting service..."
-            sudo systemctl restart feature-service || sudo systemctl restart featureservice.service
+            sudo systemctl restart featureservice.service
 
             # Health check (wait up to 60 seconds for .NET warmup)
             echo "🏥 Running health check..."
             for i in {1..60}; do
-              if curl -sf http://localhost:5000/api/v1/health > /dev/null 2>&1; then
+              if curl -sf http://localhost:5000/health > /dev/null 2>&1; then
                 echo "✅ Health check passed!"
                 break
               fi
               if [ $i -eq 60 ]; then
                 echo "❌ Health check failed after 60 seconds"
                 echo "🔄 Rolling back..."
-                if [ -f $BACKUP_DIR/FeatureService.Api.dll.bak ]; then
-                  cp -a $BACKUP_DIR/FeatureService.Api.dll.bak /opt/alephdraad/feature-service/FeatureService.Api.dll
-                fi
-                sudo systemctl restart feature-service || sudo systemctl restart featureservice.service
+                rm -rf /home/asp/monorepo-root/feature-service/publish
+                cp -r $BACKUP_DIR/publish /home/asp/monorepo-root/feature-service/
+                sudo systemctl restart featureservice.service
                 exit 1
               fi
               sleep 1
