docs: update domains to aivalid.id
Update CI/deploy workflow URLs and documentation examples to use api.aivalid.id / feature.aivalid.id / aivalid.id.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,7 +189,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          NEXT_PUBLIC_BACKEND_URL: https://api.alephdraad.com
+          NEXT_PUBLIC_BACKEND_URL: https://api.aivalid.id
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
