--- a/feature-service/.env.example
+++ b/feature-service/.env.example
@@ -5,7 +5,7 @@
 
 # JWT Configuration (MUST match Go backend)
 JWT__SECRET=your-jwt-secret-here-must-match-gin-backend
-JWT__ISSUER=api.alephdraad.fun
+JWT__ISSUER=api.aivalid.id
 JWT__AUDIENCE=alephdraad-clients
 
 # MongoDB
@@ -22,7 +22,7 @@ REDIS__REQUIRETLS=true
 # REDIS__SSLHOST=your-redis-host
 
 # CORS - Frontend URLs
-CORS__ALLOWEDORIGINS__0=https://alephdraad.fun
+CORS__ALLOWEDORIGINS__0=https://aivalid.id
 
 # ASP.NET Core
 ASPNETCORE_URLS=http://127.0.0.1:5000
