--- a/feature-service/docker-compose.yml
+++ b/feature-service/docker-compose.yml
@@ -66,9 +66,9 @@ services:
       MONGODB__CONNECTIONSTRING: "mongodb://mongodb:27017"
       MONGODB__DATABASENAME: "feature_service_db"
       JWT__SECRET: "${JWT_SECRET}"
-      JWT__ISSUER: "api.alephdraad.fun"
+      JWT__ISSUER: "api.aivalid.id"
       JWT__AUDIENCE: "alephdraad-clients"
-      CORS__ALLOWEDORIGINS__0: "https://alephdraad.fun"
+      CORS__ALLOWEDORIGINS__0: "https://aivalid.id"
       REDIS__SENTINELENDPOINTS__0: "redis-sentinel:26379"
       REDIS__SERVICENAME: "mymaster"
       REDIS__PASSWORD: "${REDIS_PASSWORD:-redispass123}"
